added image folder

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -37,7 +37,7 @@
     </ul>
 
     <h1>Case Diagram</h1>
-    <img src="" />
+    <img src="./src/case_diagram.png" />
 
     <h1>Use Cases</h1>
 </html>
