Changed file name

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -13,6 +13,12 @@
             <td>lconti1@crimson.ua.edu</td>
             <td>2</td>
         </tr>
+        <tr>
+            <td>William Jefferson</td>
+            <td>11930076</td>
+            <td>wtjefferson@crimson.ua.edu</td>
+            <td>2</td>
+        </tr>
     </table>
 
     <table>
@@ -24,6 +30,11 @@
         <tr>
             <td>Luca Conti</td>
             <td>Layed out HTML format</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>William Jefferson</td>
+            <td>Created use case diagram</td>
             <td></td>
         </tr>
     </table>
