Report.html edited online with Bitbucket

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -19,6 +19,12 @@
             <td>wtjefferson@crimson.ua.edu</td>
             <td>2</td>
         </tr>
+        <tr>
+            <td>Shanissee Lee</td>
+            <td>12100396</td>
+            <td>srlee2@crimson.ua.edu</td>
+            <td>#</td>
+        </tr>
     </table>
 
     <table>
