Report.html edited online with Bitbucket

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -43,6 +43,11 @@
             <td>Created use case diagram</td>
             <td></td>
         </tr>
+         <tr>
+            <th>Shanissee Lee</th>
+            <th>Task Performed</th>
+            <th>Percent Contributed</th>
+        </tr>
     </table>
 
     <h1>Paragraph</h1>
