Report.html edited online with Bitbucket

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -20,6 +20,12 @@
             <td>2</td>
         </tr>
         <tr>
+            <th>Jacob Aid</th>
+            <th>11950741</th>
+            <th>jiaid@crimson.ua.edu</th>
+            <th>2</th>
+        </tr>
+        <tr>
             <td>Shanissee Lee</td>
             <td>12100396</td>
             <td>srlee2@crimson.ua.edu</td>
