Added .uxf file in case any changes need to be made

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -29,7 +29,7 @@
         </tr>
         <tr>
             <td>Luca Conti</td>
-            <td>Layed out HTML format</td>
+            <td>Layed out HTML format, gave some Use Case descriptions</td>
             <td></td>
         </tr>
         <tr>
