--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -170,5 +170,30 @@
                 </li>
             </ul>
         </li>
+        <li>Add Member/Provider
+            <ul>
+                <li>Context: A provider or member needs to be added to the system's list</li>
+                <li>Actors: Provider, Manager</li>
+                <li>Best Case Scenario
+                    <ol>
+                        <li>Provider or Manager accesses the terminal</li>
+                        <li>They navigate to the edit list menu</li>
+                        <li>They select to add a member or provider to the list</li>
+                        <li>They enter the name of the new member/provider</li>
+                        <li>An account is created for the new member</li>
+                    </ol>
+                </li>
+                <li>Extensions:
+                    <ul>
+                        <li>4a. The provider/manager enters a name who already has an account
+                            <ul>
+                                <li>4a.1 The provider/manager enters the name of a person who already has an account</li>
+                                <li>The system informs the provider/manager that the person entered already has an account</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
     </ul>
 </html>
