added Remove use case

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -228,5 +228,29 @@
                 </li>
             </ul>
         </li>
+        <li>Remove Member /Provider
+            <ul>
+                <li>Context: A provider or member needs to be removed from the system's list</li>
+                <li>Actors: Provider, Manager</li>
+                <li>Best Case Scenario
+                    <ol>
+                        <li>Provider or manager accesses the terminal</li>
+                        <li>They navigate to the edit list menu</li>
+                        <li>They select to remove a member or provider from the list</li>
+                        <li>They enter the name of the member/provider to be removed</li>
+                        <li>The account is removed from the list</li>
+                    </ol>
+                </li>
+                <li>Extensions: 
+                    <ul>
+                        <li>4a. The provider/manager enters a name that does not exist</li>
+                        <ul>
+                            <li>4a.1 The provider/manager enters the name of a person who does not have an account</li>
+                            <li>4a.2 The system informs the provider/manager that the person does not have an account</li>
+                        </ul>
+                    </ul>
+                </li>
+            </ul>
+        </li>
     </ul>
 </html>
