Added Update member/provider use case

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -279,5 +279,31 @@
                 </li>
             </ul>
         </li>
+        <li>Update Member /Provider
+            <ul>
+                <li>Context: A provider or member needs to be updated on the system's list</li>
+                <li>Actors: Provider, Manager</li>
+                <li>Best Case Scenario
+                    <ol>
+                        <li>Provider or manager accesses the terminal</li>
+                        <li>They navigate to the edit list menu</li>
+                        <li>They select to update a member or provider on the list</li>
+                        <li>They enter the name of the member/provider to be update</li>
+                        <li>They edit the information on the account that needs to be updated</li>
+                        <li>The system updates the information in the systems database</li>
+                    </ol>
+                </li>
+                <li>Extensions: 
+                    <ul>
+                        <li>4a. The provider/manager enters a name that does not exist
+                            <ul>
+                                <li>4a.1 The provider/manager enters the name of a person who does not have an account</li>
+                                <li>4a.2 The system informs the provider/manager that the person does not have an account</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
     </ul>
 </html>
