TJ Trueblood - Added my information

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -37,6 +37,12 @@
             <td>chjohnson9@crimson.ua.edu</td>
             <td>2</td>
         </tr>
+        <tr>
+            <td>TJ Trueblood</td>
+            <td>12075419</td>
+            <td>tbtrueblood@crimson.ua.edu</td>
+            <td>2</td>
+        </tr>
     </table>
 
     <table>
@@ -63,6 +69,11 @@
         <tr>
             <td>Caroline Johnson</td>
             <td>Created Glossary</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>TJ Trueblood</td>
+            <td>Described each use case in this HTML file</td>
             <td></td>
         </tr>
     </table>
