Report.html edited online with Bitbucket

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -47,8 +47,8 @@
 
     <table>
         <tr>
-            <th>Name</th>
-            <th>Task Performed</th>
+            <th>Jacob Aid</th>
+            <th>Wrote Paragraph</th>
             <th>Percent Contributed</th>
         </tr>
         <tr>
@@ -79,7 +79,8 @@
     </table>
 
     <h1>Paragraph</h1>
-    <p></p>
+    <p>Our organization has been given the task of creating the ChocAn data processing software. This software will be used by ChocAn's provider terminals in order to deliver the ability for members to receive health care services from ChocAn, pay for services and comment on the service provided to them. This software will also allow ChocAn providers to look up records of members' past bills. This software will keep weekly records of how much the ChocAn provider using the terminal is to bill ChocAn for their services. It will also email reports to the providers containing the services they provided to ChocAn members. Members will also receive emails containing a report of the services they have received. Members will interact with the provider terminals using a card and a keyboard. Members will scan their card and our software must verify that their membership is valid. An error message will be given if either the card was invalid or if the membership has been suspended. Our software will then allow the member to look up services using a service code. If the servie code is invalid an error message will display. Our software will also allow the member to fill out a form that will be used for billing said member for the service they selected. The software will also allow providers to add or remove members as well as update existing member's data. The actual billing of the members will be handled by ACME Accounting Services. See the glossary for more details. Other objectives outside of our scope include the designing of the actual ChocAn terminal that will be running our software, the communication software used between ChocAn and providers, and the implementation of the EFT component.
+</p>
 
     <h1>Glossary</h1>
     <dl>
