Report.html edited online with Bitbucket

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -47,8 +47,8 @@
 
     <table>
         <tr>
-            <th>Jacob Aid</th>
-            <th>Wrote Paragraph</th>
+            <th>Name</th>
+            <th>Task Performed</th>
             <th>Percent Contributed</th>
         </tr>
         <tr>
@@ -75,6 +75,11 @@
             <td>TJ Trueblood</td>
             <td>Described each use case in this HTML file</td>
             <td></td>
+        </tr>
+        <tr>
+            <th>Jacob Aid</th>
+            <th>Wrote Paragraph</th>
+            <th>Percent Contributed</th>
         </tr>
     </table>
 
