--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -386,5 +386,42 @@
                 </li>
             </ul>
         </li>
+        <li>Find/Print Report
+            <ul>
+                <li>Context: Main Accounting Procedure finds the week's file of services provided 
+                            and print a report, can be requested manually by manager.
+                            Provider can also print one at the request of a ChocAn member</li>
+                <li>Actors: Main Accounting Procedure, Manager, Provider</li>
+                <li>Best Case Scenario:
+                    <ol>
+                        <li>File is read and reports are printed, automatically or by request</li>
+                        <li>File is successfully read and printed</li>
+                        <li>Should a member request their weekly services file, it is sent to them</li>
+                    </ol>
+                </li>
+                <li>Extensions:
+                    None
+                </li>
+            </ul>
+        </li>
+        <li>Send Report
+            <ul>
+                <li>Context: Main Accounting Procedure sends out report via e-mail attachment</li>
+                <li>Actors: Main Accounting Procedure</li>
+                <li>Best Case Scenario:
+                    <ol>
+                        
+                    </ol>
+                </li>
+            </ul>
+        </li>
+        <li>Create EFT Record
+            <ul>
+                <li>Context: Main Accounting Procedure will write EFT data to a disk</li>
+                <li>Actors: Main Accounting Procedure</li>
+                <li>Best Case Scenario:
+                </li>
+            </ul>
+        </li>
     </ul>
 </html>
