Added missing term to glossary, fixed minor formatting issues.

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -77,9 +77,9 @@
             <td></td>
         </tr>
         <tr>
-            <th>Jacob Aid</th>
-            <th>Wrote Paragraph</th>
-            <th>Percent Contributed</th>
+            <td>Jacob Aid</td>
+            <td>Wrote Paragraph</td>
+            <td>Percent Contributed</td>
         </tr>
     </table>
 
@@ -111,6 +111,8 @@
             <dd>Procedure run at midnight on Fridays at the ChocAn Data Center. It reads the week's file of provided services and prints reports.</dd>
         <dt><strong>Manager</strong></dt>
             <dd>The manager is given the summary report. A manager can request to run any report at any time during the week.</dd>
+        <dt><strong>Member</strong></dt>
+            <dd>Members pay member fees to ChocAn each month. Each member has a card containing member data. Members can recieve consultations, treatments, and other services from providers. </dd>
         <dt><strong>Member Data</strong></dt>
             <dd>The data for a member includes their city, name, member number, state, street address, and zip code.</dd>	
         <dt><strong>Member Reinstatement</strong></dt>
