Added bitbucket img and personal report

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -83,6 +83,8 @@
         </tr>
     </table>
 
+    <img src='./src/Bitbucket.PNG'>
+
     <h1>Paragraph</h1>
     <p>Our organization has been given the task of creating the ChocAn data processing software. 
         This software will be used by ChocAn's provider terminals in order to deliver the ability for members to receive health care services from ChocAn, pay for services and comment on the service provided to them. 
