fixed inconsistency with some use cases using "MSS" and some using "best case scenario".

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -29,7 +29,7 @@
             <td>Shanissee Lee</td>
             <td>12100396</td>
             <td>srlee2@crimson.ua.edu</td>
-            <td>#</td>
+            <td>2</td>
         </tr>
         <tr>
             <td>Caroline Johnson</td>
@@ -68,7 +68,7 @@
         </tr>
         <tr>
             <td>Caroline Johnson</td>
-            <td>Created Glossary</td>
+            <td>Created Glossary and fixed format/consistency issues</td>
             <td></td>
         </tr>
         <tr>
@@ -265,7 +265,7 @@
             <ul>
                 <li>Context: A provider or member needs to be added to the system's list</li>
                 <li>Actors: Provider, Manager</li>
-                <li>Best Case Scenario
+                <li>Main Success Scenario:
                     <ol>
                         <li>Provider or Manager accesses the terminal</li>
                         <li>They navigate to the edit list menu</li>
@@ -290,7 +290,7 @@
             <ul>
                 <li>Context: A provider or member needs to be removed from the system's list</li>
                 <li>Actors: Provider, Manager</li>
-                <li>Best Case Scenario
+                <li>Main Success Scenario:
                     <ol>
                         <li>Provider or manager accesses the terminal</li>
                         <li>They navigate to the edit list menu</li>
@@ -315,7 +315,7 @@
             <ul>
                 <li>Context: A provider or member needs to be updated on the system's list</li>
                 <li>Actors: Provider, Manager</li>
-                <li>Best Case Scenario
+                <li>Main Success Scenario:
                     <ol>
                         <li>Provider or manager accesses the terminal</li>
                         <li>They navigate to the edit list menu</li>
@@ -341,7 +341,7 @@
             <ul>
                 <li>Context: A member needs to be suspended on the system's list</li>
                 <li>Actors: ACME</li>
-                <li>Best Case Scenario
+                <li>Main Success Scenario:
                     <ol>
                         <li>A member is behind on ChocAn Payments</li>
                         <li>ACME personnel accesses the ChocAn system</li>
@@ -373,7 +373,7 @@
             <ul>
                 <li>Context: A member needs to be reinstated on the system's list</li>
                 <li>Actors: ACME</li>
-                <li>Best Case Scenario
+                <li>Main Success Scenario:
                     <ol>
                         <li>A member has made delinquent ChocAn Payments</li>
                         <li>ACME personnel accesses the ChocAn system</li>
@@ -407,7 +407,7 @@
                             and print a report, can be requested manually by manager.
                             Provider can also print one at the request of a ChocAn member</li>
                 <li>Actors: Main Accounting Procedure, Manager, Provider</li>
-                <li>Best Case Scenario:
+                <li>Main Success Scenario:
                     <ol>
                         <li>File is read and reports are printed, automatically or by request</li>
                         <li>File is successfully read and printed</li>
@@ -423,7 +423,7 @@
             <ul>
                 <li>Context: A provider/manager/ACME personnel needs to edit the member/provider list</li>
                 <li>Actors: Provider, Manager, ACME</li>
-                <li>Best Case Scenario
+                <li>Main Success Scenario:
                     <ol>
                         <li>The person has some change they need to make to the member/provider list</li>
                         <li>They select if they want to edit a member or provider</li>
@@ -439,7 +439,7 @@
                             and print a report, can be requested manually by manager.
                             Provider can also print one at the request of a ChocAn member</li>
                 <li>Actors: Main Accounting Procedure, Manager, Provider</li>
-                <li>Best Case Scenario:
+                <li>Main Success Scenario:
                     <ol>
                         <li>File is read and reports are printed, automatically or by request</li>
                         <li>File is successfully read and printed</li>
@@ -455,7 +455,7 @@
             <ul>
                 <li>Context: Main Accounting Procedure sends out report via e-mail attachment</li>
                 <li>Actors: Main Accounting Procedure</li>
-                <li>Best Case Scenario:
+                <li>Main Success Scenario:
                     <ol>
                         
                     </ol>
@@ -466,7 +466,7 @@
             <ul>
                 <li>Context: Main Accounting Procedure will write EFT data to a disk</li>
                 <li>Actors: Main Accounting Procedure</li>
-                <li>Best Case Scenario:
+                <li>Main Success Scenario:
                 </li>
             </ul>
         </li>
