--- a/Team7_Requirements/CarolineJohnsonTeam7Report.html
+++ b/Team7_Requirements/CarolineJohnsonTeam7Report.html
@@ -68,7 +68,7 @@
         </tr>
         <tr>
             <td>Caroline Johnson</td>
-            <td>Created Glossary</td>
+            <td>Created Glossary and fixed format/consistency issues</td>
             <td>20%</td>
         </tr>
         <tr>
